--- a/html/openchat.html
+++ b/html/openchat.html
@@ -30,8 +30,9 @@
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
     <script type = "text/javascript">
-    var socket = io.connect("http://localhost:3000");
-    
+    var socket = io.connect("http://localhost:3000/openchat");
+
+
     function setname(){
       socket.emit('setname', $('#name').val());
       totaluser()
